# unie-aiops

./: .gitignore  README.md
capstone-project/: .env.example  LICENSE  README.md
capstone-project/latex/: aaj2026.sty  paper.tex
capstone-project/latex/AI_Agent_Journal_2026_Submission_Template__1_/: biblio.bib  main.tex
capstone-project/src/: agent_autonomous.py  k8s_agent_executor.py  ticketing_a2a_server.py  ticketing_agent_executor.py
lab1-agents/: README.md  pyproject.toml
lab1-agents/src/: k8s_agent.py  ticketing_agent.py  ticketing_server.py
lab1-mcp/: .env.example  README.md  check_models.py  environment.yml  main_llm.py  main_mcp copy.py  main_mcp.py  main_mcp_simple.py  main_no_mcp.py  pyproject.toml
lab2-a2a/: .env.example  README.md  agent.py  demo.py  environment.yml  pyproject.toml  specialized_agents.py
lab2-a2a/src/: agent_host.py  k8s_agent_server.py
lab2-a2a/ticketing/: README.md  environment.yml  test_client.py
